--- a/scss/404.scss
+++ b/scss/404.scss
@@ -1,9 +1,7 @@
 .console {
     width: 50%;
-    height:50%;
+    height: 50%;
     background-color: black;
-}
-
-.not-found-header-text {
-    font-size: 500%;
+    padding: 1%;
+    white-space: nowrap;
 }
