--- a/css/404.css
+++ b/css/404.css
@@ -7,9 +7,14 @@
   white-space: nowrap;
   border-radius: 50px;
   height: 400px;
+  font-family: monospace;
+  letter-spacing: -1px;
 }
 .console ul {
   list-style: none;
+}
+.console ul li {
+  margin-bottom: 15px;
 }
 
 @-webkit-keyframes blink {
