--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   overflow-x: hidden;
   background-color: #222;
-  color: #FFF;
+  color: #fff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
 }
 
@@ -30,7 +30,7 @@ body {
 .learn-more-btn {
   position: relative;
   border-radius: 25px;
-  padding: 1% 2%;
+  padding: 10px 12px;
   font-size: 250%;
   transition-duration: 250ms;
   left: 10%;
@@ -53,4 +53,70 @@ body {
           animation-duration: 0.5s;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
+}
+
+.mobile-divider {
+  opacity: 0;
+}
+
+@media only screen and (max-width: 1500px) {
+  .main-title {
+    position: relative;
+    font-size: 500%;
+    text-align: center;
+    left: 0;
+  }
+  .side-img {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    float: none;
+  }
+  .title-description {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    text-align: center;
+    font-size: 150%;
+  }
+  .learn-more-btn-container {
+    position: relative;
+    text-align: center;
+    display: block;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .learn-more-btn {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 12px 15px;
+  }
+  .learn-more-btn:hover {
+    left: -3%;
+    margin-top: 4.5%;
+  }
+  .mobile-divider {
+    position: relative;
+    opacity: 0.25;
+    width: 50%;
+    left: 25%;
+  }
 }/*# sourceMappingURL=main.css.map */
