--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,18 +1,20 @@
 $background-color: #222;
-$fg-text-color: #FFF;
+$fg-text-color: #fff;
 
 body {
     overflow-x: hidden;
     background-color: $background-color;
     color: $fg-text-color;
 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto;
 }
 
 .main-title {
     position: relative;
     font-size: 1000%;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
 
     left: 10%;
     top: 15%;
@@ -27,8 +29,8 @@ body {
 
 .side-img {
     position: relative;
-    float:right;
-    border-radius:50%;
+    float: right;
+    border-radius: 50%;
 
     right: 5%;
 
@@ -38,14 +40,14 @@ body {
 .learn-more-btn {
     position: relative;
     border-radius: 25px;
-    padding: 1% 2%;
+    padding: 10px 12px;
     font-size: 250%;
 
     transition-duration: 250ms;
 
     left: 10%;
     margin-top: 5%;
-    color:white;
+    color: white;
     background-color: #333;
     border: 0;
 
@@ -57,9 +59,80 @@ body {
     }
 }
 
-
 .fade-in {
     animation-name: fade_in;
     animation-duration: 0.5s;
     animation-timing-function: linear;
+}
+
+.mobile-divider {
+    opacity: 0;
+}
+
+@media only screen and (max-width: 1500px) {
+    .main-title {
+        position: relative;
+        font-size: 500%;
+        text-align: center;
+        left: 0;
+    }
+
+    .side-img {
+        position: relative;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        float: none;
+    }
+
+    .title-description {
+        position: relative;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        text-align: center;
+        font-size: 150%;
+    }
+
+    .learn-more-btn-container {
+        position: relative;
+        text-align: center;
+        display: block;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .learn-more-btn {
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        padding: 12px 15px;
+
+        &:hover {
+            left: -3%;
+            margin-top: 4.5%;  
+        }
+    }
+
+    .mobile-divider {
+        position: relative;
+        opacity: 0.25;
+        width: 50%;
+        left: 25%;
+    }
 }
