Add Poppins Font

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,8 +13,7 @@ body {
 .main-title {
     position: relative;
     font-size: 1000%;
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
 
     left: 10%;
     top: 15%;
