--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,13 @@ body {
   overflow-x: hidden;
   background-color: #222;
   color: #fff;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+  font-family: 'Poppins', sans-serif;
 }
 
 .main-title {
   position: relative;
   font-size: 1000%;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   left: 10%;
   top: 15%;
   transition-duration: 250ms;
@@ -123,4 +123,4 @@ body {
     width: 50%;
     left: 25%;
   }
-}/*# sourceMappingURL=main.css.map */
+}
