--- a/css/404.css
+++ b/css/404.css
@@ -11,6 +11,10 @@
 }
 .console ul {
   list-style: none;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  scrollbar-track-color: rgb(15, 15, 15);
 }
 .console ul li {
   margin-bottom: 15px;
