--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
   overflow-x: hidden;
   background-color: #222;
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
 }
 
 .main-title {
