--- a/scss/404.scss
+++ b/scss/404.scss
@@ -12,6 +12,9 @@
     & ul {
         list-style: none;
         overflow: auto;
+        width: 100%;
+        height: 100%;
+        scrollbar-track-color: rgb(15, 15, 15);
 
         & li {
             margin-bottom: 15px;
