Fix navbar not loading in 404

--- a/css/404.css
+++ b/css/404.css
@@ -53,8 +53,10 @@
 
 .not-found-text {
   font-size: 200px;
+  font-family: "Poppins" sans-serif;
 }
 
 .not-found-info {
   font-size: 30px;
+  font-family: "Poppins" sans-serif;
 }
