--- a/css/404.css
+++ b/css/404.css
@@ -4,9 +4,9 @@
   background-color: black;
   padding: 1%;
   padding-bottom: 0.5%;
-  border-radius: 50px;
+  border-radius: 20px;
   height: 400px;
-  font-family: monospace;
+  font-family: Consolas;
   letter-spacing: -1px;
 }
 .console ul {
