--- a/css/404.css
+++ b/css/404.css
@@ -4,7 +4,8 @@
   background-color: black;
   padding: 1%;
   padding-bottom: 0.5%;
-  border-radius: 20px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
   height: 400px;
   font-family: Consolas;
   letter-spacing: -1px;
@@ -18,6 +19,18 @@
 }
 .console ul li {
   margin-bottom: 15px;
+}
+
+.terminal-top {
+  position: relative;
+  font-size: 250%;
+  background-color: white;
+  color: black;
+  width: 50%;
+  left: 25%;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  font-family: "Poppins" sans-serif;
 }
 
 @-webkit-keyframes blink {
