--- a/scss/404.scss
+++ b/scss/404.scss
@@ -4,7 +4,8 @@
     background-color: black;
     padding: 1%;
     padding-bottom: 0.5%;
-    border-radius: 20px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
     height: 400px;
     font-family: Consolas;
     letter-spacing: -1px;
@@ -20,6 +21,18 @@
             margin-bottom: 15px;
         }
     }
+}
+
+.terminal-top {
+    position: relative;
+    font-size: 250%;
+    background-color: white;
+    color: black;
+    width: 50%;
+    left: 25%;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    font-family: "Poppins" sans-serif;
 }
 
 @keyframes blink {
@@ -45,10 +58,10 @@
 
 .not-found-text {
     font-size: 200px;
-    font-family: 'Poppins' sans-serif;
+    font-family: "Poppins" sans-serif;
 }
 
 .not-found-info {
     font-size: 30px;
-    font-family: 'Poppins' sans-serif;
+    font-family: "Poppins" sans-serif;
 }
