--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,65 @@
+html {
+  height: 100%;
+}
+
 body {
   overflow-x: hidden;
   background-color: #222;
   color: #fff;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+  font-family: "Poppins" sans-serif;
+  height: 100%;
+}
+
+.title-container {
+  position: absolute;
+  width: 50%;
+  text-align: right;
+  left: 37.5%;
+  top: 25%;
 }
 
 .main-title {
   position: relative;
-  font-size: 1000%;
+  font-size: 800%;
   font-family: "Poppins", sans-serif;
-  left: 10%;
-  top: 15%;
+  margin: 0;
   transition-duration: 250ms;
+}
+.main-title:hover {
+  font-size: 850%;
+  text-shadow: 0px 0px 35px #000;
 }
 
 .title-description {
-  position: relative;
-  left: 10%;
-  font-size: 150%;
+  font-size: 250%;
+  font-family: "Bebas Neue" sans-serif;
   transition-duration: 250ms;
+}
+
+.charge {
+  padding-right: 7px;
+  font-family: "Bebas Neue";
+  transition-duration: 250ms;
+  background: linear-gradient(to right, #f5bc42, #878412);
+  background-size: 500% auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: shine 1s linear infinite;
+          animation: shine 1s linear infinite;
+}
+@-webkit-keyframes shine {
+  to {
+    background-position: 200% center;
+  }
+}
+@keyframes shine {
+  to {
+    background-position: 200% center;
+  }
+}
+.charge:hover {
+  font-family: "Bebas Neue" sans-serif;
+  font-size: 125%;
 }
 
 .side-img {
@@ -62,13 +103,62 @@ body {
   transition-duration: 250ms;
 }
 
-@media only screen and (max-width: 1500px) {
-  .main-title {
-    position: relative;
-    font-size: 500%;
-    text-align: center;
+@media only screen and (max-width: 1200px) {
+  body {
+    overflow-x: hidden;
+    background-color: #222;
+    color: #fff;
+    font-family: "Poppins" sans-serif;
+    height: 100%;
+  }
+  .title-container {
+    position: absolute;
+    width: 100%;
     left: 0;
-    transition-duration: 0ms;
+    right: 0;
+    top: 1.5%;
+    margin: 0;
+    text-align: center;
+  }
+  .charge {
+    padding-right: 7px;
+    font-family: "Bebas Neue";
+    transition-duration: 250ms;
+    background: linear-gradient(to right, #f5bc42, #878412);
+    background-size: 500% auto;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: shine 1s linear infinite;
+            animation: shine 1s linear infinite;
+  }
+  @-webkit-keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
+  @keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
+  .charge:hover {
+    font-family: "Bebas Neue" sans-serif;
+  }
+  .main-title {
+    text-align: center;
+    position: relative;
+    font-size: 600%;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transition-duration: 250ms;
+  }
+  .main-title:hover {
+    font-size: 650%;
+    text-shadow: 0px 0px 35px #000;
   }
   .side-img {
     position: relative;
@@ -83,17 +173,9 @@ body {
     float: none;
   }
   .title-description {
-    position: relative;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    text-align: center;
-    font-size: 150%;
+    font-size: 250%;
+    font-family: "Bebas Neue" sans-serif;
+    transition-duration: 250ms;
   }
   .learn-more-btn-container {
     position: relative;
@@ -116,11 +198,5 @@ body {
   .learn-more-btn:hover {
     left: -3%;
     margin-top: 4.5%;
-  }
-  .mobile-divider {
-    position: relative;
-    opacity: 0.25;
-    width: 50%;
-    left: 25%;
   }
 }
