--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,33 +1,72 @@
 $background-color: #222;
 $fg-text-color: #fff;
 
+html {
+    height: 100%;
+}
+
 body {
     overflow-x: hidden;
     background-color: $background-color;
     color: $fg-text-color;
 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto;
+    font-family: "Poppins" sans-serif;
+
+    height: 100%;
+}
+
+.title-container {
+    position: absolute;
+    width: 50%;
+    text-align: right;
+
+    left: 37.5%;
+
+    top: 25%;
 }
 
 .main-title {
     position: relative;
-    font-size: 1000%;
-    font-family: 'Poppins', sans-serif;
+    font-size: 800%;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
 
-    left: 10%;
-    top: 15%;
+    transition-duration: 250ms;
+
+    &:hover {
+        font-size: 850%;
+        text-shadow: 0px 0px 35px #000;
+    }
+}
+
+.title-description {
+    font-size: 250%;
+    font-family: "Bebas Neue" sans-serif;
 
     transition-duration: 250ms;
 }
 
-.title-description {
-    position: relative;
-    left: 10%;
-
-    font-size: 150%;
-
+.charge {
+    padding-right: 7px;
+    font-family: "Bebas Neue";
     transition-duration: 250ms;
+
+    background: linear-gradient(to right, #f5bc42, #878412);
+    background-size: 500% auto;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    @keyframes shine {
+        to {
+            background-position: 200% center;
+        }
+    }
+    animation: shine 1s linear infinite;
+
+    &:hover {
+        font-family: "Bebas Neue" sans-serif;
+        font-size: 125%;
+    }
 }
 
 .side-img {
@@ -73,13 +112,66 @@ body {
     transition-duration: 250ms;
 }
 
-@media only screen and (max-width: 1500px) {
-    .main-title {
-        position: relative;
-        font-size: 500%;
-        text-align: center;
+@media only screen and (max-width: 1200px) {
+    body {
+        overflow-x: hidden;
+        background-color: $background-color;
+        color: $fg-text-color;
+
+        font-family: "Poppins" sans-serif;
+
+        height: 100%;
+    }
+
+    .title-container {
+        position: absolute;
+        width: 100%;
         left: 0;
-        transition-duration: 0ms;
+        right: 0;
+        top: 1.5%;
+        margin: 0;
+        text-align: center;
+    }
+
+    .charge {
+        padding-right: 7px;
+        font-family: "Bebas Neue";
+        transition-duration: 250ms;
+
+        background: linear-gradient(to right, #f5bc42, #878412);
+        background-size: 500% auto;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        @keyframes shine {
+            to {
+                background-position: 200% center;
+            }
+        }
+        animation: shine 1s linear infinite;
+
+        &:hover {
+            font-family: "Bebas Neue" sans-serif;
+        }
+    }
+
+    .main-title {
+        text-align: center;
+        position: relative;
+        font-size: 600%;
+        font-family: "Poppins", sans-serif;
+        margin: 0;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+
+        transition-duration: 250ms;
+
+        &:hover {
+            font-size: 650%;
+            text-shadow: 0px 0px 35px #000;
+        }
     }
 
     .side-img {
@@ -96,17 +188,10 @@ body {
     }
 
     .title-description {
-        position: relative;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-        text-align: center;
-        font-size: 150%;
+        font-size: 250%;
+        font-family: "Bebas Neue" sans-serif;
+    
+        transition-duration: 250ms;
     }
 
     .learn-more-btn-container {
@@ -130,14 +215,7 @@ body {
 
         &:hover {
             left: -3%;
-            margin-top: 4.5%;  
+            margin-top: 4.5%;
         }
-    }
-
-    .mobile-divider {
-        position: relative;
-        opacity: 0.25;
-        width: 50%;
-        left: 25%;
     }
 }
