--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,82 @@ html {
 
 body {
   overflow-x: hidden;
-  background-color: #222;
-  color: #fff;
   font-family: "Poppins" sans-serif;
   height: 100%;
+}
+
+nav {
+  font-family: "Poppins";
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  position: fixed;
+  gap: 10px;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 100%;
+  color: white;
+  background-color: #111;
+}
+nav a {
+  display: flex;
+  align-items: center;
+  transition-duration: 250ms;
+  text-decoration: none;
+  color: white;
+  font-size: 17px;
+  color: grey;
+}
+nav a:hover {
+  color: white;
+}
+nav a:hover i {
+  font-size: 100%;
+  margin-right: 5px;
+}
+nav a i {
+  transition-duration: 250ms;
+  font-size: 0;
+  margin-right: 0;
+}
+nav h3 {
+  margin-left: 15px;
+  color: white;
+}
+nav h3 a:hover {
+  font-size: 120%;
+}
+nav .nav-title-link {
+  color: white;
+}
+nav button {
+  font-family: "Poppins";
+  cursor: pointer;
+  margin-right: 15px;
+  background: dodgerBlue;
+  padding: 7px 10px;
+  border-radius: 5px;
+  border: 0;
+  color: white;
+}
+
+.vertical-line {
+  display: inline-block;
+  background: white;
+  width: 3px;
+  height: 40%;
+  margin: 0;
+  border-radius: 25px;
+}
+
+.vertical-line-small {
+  display: inline-block;
+  background: grey;
+  width: 3px;
+  height: 25%;
+  margin: 0;
+  border-radius: 25px;
 }
 
 .title-container {
@@ -106,8 +178,8 @@ body {
 @media only screen and (max-width: 1200px) {
   body {
     overflow-x: hidden;
-    background-color: #222;
-    color: #fff;
+    background-color: #131313;
+    color: white;
     font-family: "Poppins" sans-serif;
     height: 100%;
   }
