--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
-$background-color: #222;
-$fg-text-color: #fff;
+$primary: dodgerBlue;
+$secondary: #131313;
+$secondary-dark: #111;
 
 html {
     height: 100%;
@@ -7,13 +8,94 @@ html {
 
 body {
     overflow-x: hidden;
-    background-color: $background-color;
-    color: $fg-text-color;
-
     font-family: "Poppins" sans-serif;
-
     height: 100%;
 }
+
+nav {
+    font-family: "Poppins";
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    position: fixed;
+    gap: 10px;
+    top: 0;
+    left: 0;
+    height: 50px;
+    width: 100%;
+    color: white;
+    background-color: $secondary-dark;
+
+    a {
+        display: flex;
+        align-items: center;
+        transition-duration: 250ms;
+        text-decoration: none;
+        color: white;
+        font-size: 17px;
+        color: grey;
+
+        &:hover {
+            color: white;
+
+            & i {
+                font-size: 100%;
+                margin-right: 5px;
+            }
+        }
+
+        & i {
+            transition-duration: 250ms;
+            font-size: 0;
+            margin-right: 0;
+        }
+    }
+
+    & h3 {
+        margin-left: 15px;
+        color: white;
+
+        & a {
+            &:hover {
+                font-size: 120%;
+            }
+        }
+    }
+
+    & .nav-title-link {
+        color: white;
+    }
+
+    & button {
+        font-family: "Poppins";
+        cursor: pointer;
+        margin-right: 15px;
+        background: $primary;
+        padding: 7px 10px;
+        border-radius: 5px;
+        border: 0;
+        color: white;
+    }
+}
+
+.vertical-line {
+    display: inline-block;
+    background: white;
+    width: 3px;
+    height: 40%;
+    margin: 0;
+    border-radius: 25px;
+}
+
+.vertical-line-small {
+    display: inline-block;
+    background: grey;
+    width: 3px;
+    height: 25%;
+    margin: 0;
+    border-radius: 25px;
+}
+
 
 .title-container {
     position: absolute;
@@ -115,8 +197,8 @@ body {
 @media only screen and (max-width: 1200px) {
     body {
         overflow-x: hidden;
-        background-color: $background-color;
-        color: $fg-text-color;
+        background-color: $secondary;
+        color: white;
 
         font-family: "Poppins" sans-serif;
 
