oops i changed some variables

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,8 @@ body {
     overflow-x: hidden;
     font-family: "Poppins" sans-serif;
     height: 100%;
+    background: $secondary;
+    color: white;
 }
 
 nav {
