--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@ body {
   overflow-x: hidden;
   font-family: "Poppins" sans-serif;
   height: 100%;
+  background: #131313;
+  color: white;
 }
 
 nav {
