--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,14 +8,14 @@ html {
 
 body {
     overflow-x: hidden;
-    font-family: "Poppins" sans-serif;
+    font-family: "Poppins", arial;
     height: 100%;
     background: $secondary;
     color: white;
 }
 
 nav {
-    font-family: "Poppins";
+    font-family: "Poppins", arial;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -71,7 +71,7 @@ nav {
     }
 
     & button {
-        font-family: "Poppins";
+        font-family: "Poppins", arial;
         cursor: pointer;
         margin-right: 15px;
         background: $primary;
@@ -100,41 +100,9 @@ nav {
     border-radius: 25px;
 }
 
-
-.title-container {
-    position: absolute;
-    width: 50%;
-    text-align: right;
-
-    left: 37.5%;
-
-    top: 25%;
-}
-
-.main-title {
-    position: relative;
-    font-size: 800%;
-    font-family: "Poppins", sans-serif;
-    margin: 0;
-
-    transition-duration: 250ms;
-
-    &:hover {
-        font-size: 850%;
-        text-shadow: 0px 0px 35px #000;
-    }
-}
-
-.title-description {
-    font-size: 250%;
-    font-family: "Bebas Neue" sans-serif;
-
-    transition-duration: 250ms;
-}
-
 .charge {
     padding-right: 7px;
-    font-family: "Bebas Neue";
+    font-family: "Bebas Neue", arial;
     transition-duration: 250ms;
 
     background: linear-gradient(to right, #f5bc42, #878412);
@@ -150,40 +118,7 @@ nav {
     animation: shine 1s linear infinite;
 
     &:hover {
-        font-family: "Bebas Neue" sans-serif;
         font-size: 125%;
-    }
-}
-
-.side-img {
-    position: relative;
-    float: right;
-    border-radius: 50%;
-
-    right: 5%;
-
-    margin-top: 1%;
-}
-
-.learn-more-btn {
-    position: relative;
-    border-radius: 25px;
-    padding: 10px 12px;
-    font-size: 250%;
-
-    transition-duration: 50ms;
-
-    left: 10%;
-    margin-top: 5%;
-    color: white;
-    background-color: #333;
-    border: 0;
-
-    &:hover {
-        /*font-size: 270%;*/
-        box-shadow: 2px 5px rgb(17, 17, 17);
-        left: 9.5%;
-        margin-top: 4.5%;
     }
 }
 
@@ -191,11 +126,6 @@ nav {
     animation-name: fade_in;
     animation-duration: 0.5s;
     animation-timing-function: linear;
-}
-
-.mobile-divider {
-    opacity: 0;
-    transition-duration: 250ms;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -207,16 +137,6 @@ nav {
         font-family: "Poppins" sans-serif;
 
         height: 100%;
-    }
-
-    .title-container {
-        position: absolute;
-        width: 100%;
-        left: 0;
-        right: 0;
-        top: 1.5%;
-        margin: 0;
-        text-align: center;
     }
 
     .charge {
@@ -238,70 +158,6 @@ nav {
 
         &:hover {
             font-family: "Bebas Neue" sans-serif;
-        }
-    }
-
-    .main-title {
-        text-align: center;
-        position: relative;
-        font-size: 600%;
-        font-family: "Poppins", sans-serif;
-        margin: 0;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-
-        transition-duration: 250ms;
-
-        &:hover {
-            font-size: 650%;
-            text-shadow: 0px 0px 35px #000;
-        }
-    }
-
-    .side-img {
-        position: relative;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-        float: none;
-    }
-
-    .title-description {
-        font-size: 250%;
-        font-family: "Bebas Neue" sans-serif;
-    
-        transition-duration: 250ms;
-    }
-
-    .learn-more-btn-container {
-        position: relative;
-        text-align: center;
-        display: block;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .learn-more-btn {
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        padding: 12px 15px;
-
-        &:hover {
-            left: -3%;
-            margin-top: 4.5%;
         }
     }
 }
