--- a/scss/main.scss
+++ b/scss/main.scss
@@ -103,9 +103,10 @@ nav {
 }
 
 .charge {
-    padding-right: 7px;
+    //padding-right: 7px;
     font-family: "Bebas Neue", arial;
     transition-duration: 250ms;
+    font-size: 1.25em;
 
     background: linear-gradient(to right, #f5bc42, #878412);
     background-size: 500% auto;
@@ -120,7 +121,7 @@ nav {
     animation: shine 1s linear infinite;
 
     &:hover {
-        font-size: 125%;
+        font-size: 1.4em;
     }
 }
 
@@ -128,6 +129,21 @@ nav {
     animation-name: fade_in;
     animation-duration: 0.5s;
     animation-timing-function: linear;
+}
+
+.main-container {
+    position: sticky;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height:100%;
+
+    & .title {
+        font-size: 6em;
+        margin: 0;
+    }
 }
 
 @media only screen and (max-width: 1200px) {
