--- a/scss/main.scss
+++ b/scss/main.scss
@@ -139,6 +139,7 @@ nav {
     align-items: center;
     justify-content: center;
     height:100%;
+    text-align: center;
 
     & .title {
         font-size: 6em;
