--- a/css/main.css
+++ b/css/main.css
@@ -122,19 +122,24 @@ nav button {
 }
 
 .main-container {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 50px;
+  background-image: url(https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80);
+  background-size: cover;
+  margin-top: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100%;
   text-align: center;
 }
 .main-container .title {
   font-size: 6em;
   margin: 0;
+}
+.main-container .incentive-text {
+  font-size: 4em;
+}
+.main-container .incentive-desc {
+  font-size: 1.4em;
 }
 
 @media only screen and (max-width: 1200px) {
