--- a/scss/main.scss
+++ b/scss/main.scss
@@ -132,18 +132,26 @@ nav {
 }
 
 .main-container {
-    position: sticky;
-    top: 50px;
+    background-image: url(https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80);
+    background-size: cover;
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height:100%;
     text-align: center;
 
     & .title {
         font-size: 6em;
         margin: 0;
+    }
+
+    & .incentive-text {
+        font-size: 4em;
+    }
+
+    & .incentive-desc {
+        font-size: 1.4em;
     }
 }
 
