--- a/scss/main.scss
+++ b/scss/main.scss
@@ -132,7 +132,7 @@ nav {
 }
 
 .main-container {
-    background-image: url(https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80);
+    background-image: url(https://images.unsplash.com/photo-1509023464722-18d996393ca8?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTgwOTN8MHwxfHNlYXJjaHwzfHxkYXJrfGVufDB8fHx8MTY2ODk1OTM5OQ&ixlib=rb-4.0.3&q=80&w=1080);
     background-size: cover;
     margin-top: 50px;
     display: flex;
@@ -144,6 +144,7 @@ nav {
     & .title {
         font-size: 6em;
         margin: 0;
+        margin-top: 50px;
     }
 
     & .incentive-text {
