--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-.website-container {
+.main-container {
   position: relative;
   height: 100vh;
   background-image: url(https://images.unsplash.com/photo-1534996858221-380b92700493?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTgwOTN8MHwxfHNlYXJjaHwzfHxlYXJ0aHxlbnwwfHx8fDE2NzA1MjYxMTk&ixlib=rb-4.0.3&q=80&w=1080);
