--- a/scss/index.scss
+++ b/scss/index.scss
@@ -49,7 +49,11 @@
         }
 
         & .side-left {
-            padding: 100px 400px;
+            display: flex;
+            align-items: top;
+            flex-direction: column;
+            justify-content: center;
+            padding: 0 400px;
             padding-right: 0;
             padding-bottom: 0;
 
