--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,6 +3,44 @@
     height: 100vh;
     background-image: url(https://images.unsplash.com/photo-1534996858221-380b92700493?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTgwOTN8MHwxfHNlYXJjaHwzfHxlYXJ0aHxlbnwwfHx8fDE2NzA1MjYxMTk&ixlib=rb-4.0.3&q=80&w=1080);
     background-size: cover;
+
+    & footer {
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        padding: 0 10px;
+        font-size: 0.7em;
+        background: rgba(0, 0, 0, 0.8);
+        width: 100vw;
+        height: 50px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+
+        & .section {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            min-width: 100px;
+            max-width: 175px;
+
+            justify-content: center;
+
+            & .grey {
+                color: #C0C0C0;
+            }
+
+            & a {
+                color: gray;
+                text-decoration: none;
+                
+
+                &:hover {
+                    color: #A0A0A0;
+                }
+            }
+        }
+    }
 }
 
 .section-2 {
