--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
   height: 100vh;
   background-image: url(https://images.unsplash.com/photo-1534996858221-380b92700493?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTgwOTN8MHwxfHNlYXJjaHwzfHxlYXJ0aHxlbnwwfHx8fDE2NzA1MjYxMTk&ixlib=rb-4.0.3&q=80&w=1080);
   background-size: cover;
+  overflow: hidden;
 }
 .main-container footer {
   display: flex;
@@ -36,22 +37,28 @@
   color: #A0A0A0;
 }
 
-.section-2 {
+.section-2 .side-left {
   display: flex;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  padding: 0;
 }
-.section-2 .main-content {
+.section-2 .side-right {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.5);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  padding: 20px;
-  border-radius: 25px;
+  align-items: baseline;
+  justify-content: baseline;
+  padding-left: 0px;
+}
+.section-2 .side-right h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 3em;
+}
+.section-2 .side-right h3 {
+  font-size: 1.25em;
+  color: #BBB;
 }
 
 .section {
