--- a/css/window.css
+++ b/css/window.css
@@ -1,4 +1,4 @@
-.window {
+.mac-term {
   background: rgba(10, 10, 10, 0.85);
   border-radius: 15px;
   width: 500px;
@@ -6,7 +6,7 @@
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
   padding: 0;
 }
-.window .titlebar {
+.mac-term .titlebar {
   display: flex;
   justify-content: space-between;
   height: 40px;
@@ -14,18 +14,18 @@
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
-.window .titlebar .left {
+.mac-term .titlebar .left {
   gap: 5px;
 }
-.window .titlebar .middle {
+.mac-term .titlebar .middle {
   text-align: center;
   padding: 0;
   justify-content: center;
 }
-.window .titlebar .middle span {
+.mac-term .titlebar .middle span {
   text-align: center;
 }
-.window .titlebar .container {
+.mac-term .titlebar .container {
   display: flex;
   align-items: center;
   margin-top: 10px;
@@ -35,7 +35,7 @@
   color: white;
   font-size: 1em;
 }
-.window .titlebar .container .titlebar-btn {
+.mac-term .titlebar .container .titlebar-btn {
   transition-duration: 100ms;
   display: block;
   width: 15px;
@@ -44,34 +44,34 @@
   border: 0;
   padding: 0;
 }
-.window .titlebar .container .titlebar-btn:hover {
+.mac-term .titlebar .container .titlebar-btn:hover {
   box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.4) inset;
 }
-.window .titlebar .container .minimize {
+.mac-term .titlebar .container .minimize {
   background: #ffbe08;
 }
-.window .titlebar .container .maximize {
+.mac-term .titlebar .container .maximize {
   background: #17ca30;
 }
-.window .titlebar .container .close {
+.mac-term .titlebar .container .close {
   background: #ff6245;
 }
-.window .main-content {
+.mac-term .main-content {
   width: 100%;
   padding: 10px;
   padding-top: 0;
   padding-bottom: 5px;
 }
-.window .main-content iframe {
+.mac-term .main-content iframe {
   border-radius: 10px;
 }
-.window .main-content .pre-content {
+.mac-term .main-content .pre-content {
   white-space: pre;
   font-family: monospace;
 }
-.window .main-content .pre-content .green {
+.mac-term .main-content .pre-content .green {
   color: rgb(0, 184, 0);
 }
-.window .main-content .pre-content .blue {
+.mac-term .main-content .pre-content .blue {
   color: dodgerBlue;
 }
