--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     background-image: url(https://images.unsplash.com/photo-1534996858221-380b92700493?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTgwOTN8MHwxfHNlYXJjaHwzfHxlYXJ0aHxlbnwwfHx8fDE2NzA1MjYxMTk&ixlib=rb-4.0.3&q=80&w=1080);
     background-size: cover;
+    overflow: hidden;
 
     & footer {
         display: flex;
@@ -44,21 +45,31 @@
 }
 
 .section-2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    & .main-content {
+    & .side-left {
         display: flex;
+        align-items: center;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        background: rgba(0,0,0,0.5);
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
-        padding: 20px;
-        border-radius: 25px;
+        padding: 0;
+    }
+
+    & .side-right {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        justify-content: baseline;
+        padding-left: 0px;
+
+        & h1 {
+            margin: 0;
+            padding: 0;
+            font-size: 3em;
+        }
+
+        & h3 {
+            font-size: 1.25em;
+            color: #BBB;
+        }
     }
 }
 
