--- a/scss/window.scss
+++ b/scss/window.scss
@@ -1,4 +1,4 @@
-.window {
+.mac-term {
     background: rgb(10, 10, 10, 0.85);
     border-radius: 15px;
     width: 500px;
@@ -75,6 +75,8 @@
         padding-top: 0;
         padding-bottom: 5px;
 
+        
+
         & iframe {
             border-radius: 10px;
         }
@@ -90,6 +92,8 @@
             & .blue {
                 color: dodgerBlue;
             }
+
+            
         }
     }
 }
